
[package]
name = "missing_account_checks_pinocchio"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio = "0.8.4"
pinocchio-system = "0.2.3"

[lib]
crate-type = ["lib", "cdylib"]

[dev-dependencies]
mollusk-svm = "0.10.1"
mollusk-svm-programs-memo = "0.10.1"
mollusk-svm-programs-token = "0.10.1"
solana-account = "3.3.0"
solana-feature-set = "2.2.5"
solana-precompiles = "2.2.2"
solana-program = "3.0.0"
solana-pubkey = "4.0.0"
solana-sdk = "3.0.0"
